--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title>Hello from AWS S3!</title>
 </head>
 <body>
-  <h1>Welcome ravi to my S3 hosted site 🚀</h1>
+  <h1>Welcome raviravi to my S3 hosted site 🚀</h1>
 </body>
 </html>
