change the code

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hello from AWS S3!</title>
+  <title>Hello from S3!</title>
 </head>
 <body>
-  <h1>Welcome raviravi to my S3 hosted site 🚀</h1>
+  <h1>It works!</h1>
 </body>
 </html>
